--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   </head>
   <body>
 
+    <div class="main ui text container">
+      <h1 class="ui dividing centered header">Popular Products</h1>
+      <div id="content"></div>
+    </div>
+
+    <script src="./js/seed.js" charset="utf-8"></script>
     <script src="./vendor/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="./vendor/babel-standalone.js" charset="utf-8"></script>
     <script src="./vendor/react.js" charset="utf-8"></script>
     <script src="./vendor/react-dom.js" charset="utf-8"></script>
     <script src="./semantic-dist/semantic.min.js" charset="utf-8"></script>
-    <script src="./js/app.js" charset="utf-8" type="text/babel"></script>
+    <script src="./js/app.js" charset="utf-8" type="text/babel" data-plugins="transform-class-properties"></script>
   </body>
 </html>
